syntax = "proto3";

package proto;

service Service {
    rpc Start(ServiceRequest) returns (StatusResponse);

    rpc Stop(ServiceRequest) returns (StatusResponse);
}

service Docker {
    rpc Start(DockerRequest) returns (StatusResponse);

    rpc Stop(DockerRequest) returns (StatusResponse);
}

message ServiceRequest {
    string name = 1;
}

message DockerRequest {
    string name = 1;
}

message StatusResponse {
    enum Status{
        SUCCESS = 0;
        FAIL = 1;
    }
    Status status = 1;
    string message = 2;
}